
//Player animation parameters
public static class PAP
{
    public const string moveX = "moveX";
    public const string isMoving = "isMoving";
    public const string axisXinput = "Horizontal";
    public const string forceX = "forceX";
    public const string impulseY = "impulseY";
    public const string landedOnGround = "landedOnGround";
    public const string isOnGround = "isOnGround";
    public const string JumpTriggerName = "jump";
    public const string hasDoubleJumped = "hasDoubleJumped";
    public const string jumpKeyName = "Jump";
    public const string velocityY = "velocityY";
    public const string impulseX = "impulseX";
    public const string isOnWall = "isOnWall";
    public const string stopVelocity = "stopVelocity";
    


    /*public const string isRunning = "isRunning";
    public const string isJumping = "isJumping";*/
}